terraform/sg.tf
resource "aws_security_group" "alb" {
  name        = "${var.project_name}-alb"
  description = "Security group for public ALB"
  vpc_id      = data.aws_vpc.default.id
  ingress {
    description = "http from internet"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    description = "allow outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name        = "${var.project_name}-alb"
    Project     = var.project_name
    Environment = var.environment
    ManagedBy   = "Terraform"
  }
}

resource "aws_security_group" "ecs" {
  name        = "${var.project_name}-ecs"
  description = "Security group for ECS task"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    description     = "http from alb only"
    from_port       = 3000
    to_port         = 3000
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }
  egress {
    description = "allow outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name        = "${var.project_name}-ecs"
    Project     = var.project_name
    Environment = var.environment
    ManagedBy   = "Terraform"

  }
}
#                  TERRAFORM CONFIG
#                     *.tf files
#                  "What I WANT"
#                        │
#                        ▼
#             ┌──────────────────────┐
#             │                      │
#             │   TERRAFORM CORE     │
#             │                      │
#             │  • Read .tf          │
#             │  • Read state        │
#             │  • Build dependency  │
#             │    graph             │
#             │  • Compare           │
#             │  • Generate plan     │
#             │                      │
#             └───────┬──────────────┘
#                     │
#          ┌──────────┴──────────┐
#          │                     │
#          ▼                     ▼
#   terraform.tfstate       AWS Provider
#   "What Terraform         "Talk to AWS"
#    manages"
#                               │
#                               ▼
#                     ┌──────────────────┐
#                     │  AWS RESOURCES   │
#                     │                  │
#                     │ Managed by       │
#                     │ Terraform        │
#                     │                  │
#                     │ ECS              │
#                     │ ECR              │
#                     │ IAM              │
#                     │ Security Groups  │
#                     │ ALB              │
#                     └──────────────────┘
